# services/job-manager/src/models/__init__.py
@@ -1,4 +1,6 @@
-from .artifact import Artifact
-from .experiment import Experiment
-from .pipeline import Pipeline
-from .run import Run
+from openapi_server.models.create_pipeline import CreatePipeline
+from openapi_server.models.create_run import CreateRun
+from openapi_server.models.experiment import Experiment
+from openapi_server.models.metrics import Metrics
+from openapi_server.models.pipeline import Pipeline
+from openapi_server.models.run import Run
