# services/job-manager/src/models/artifact.py
@@ -1,7 +1,0 @@
-from pydantic import BaseModel
-
-
-class Artifact(BaseModel):
-    id: int
-    name: str
-    description: str
