# services/job-manager/src/models/pipeline.py
@@ -1,7 +1,0 @@
-from pydantic import BaseModel
-
-
-class Pipeline(BaseModel):
-    id: int
-    name: str
-    description: str
